Update 'p7nh64uy6-java-springboot' component image to: quay.io/rhtap_qe/rhtap-qe:8a04eb604dc4068940aab22a29388ebc4d1fa0bd@sha256:3b9cc21e719361a1c18653b64e272bcf9f3cad8831c89c20f84cc0252e1c7d2c

--- a/components/p7nh64uy6-java-springboot/overlays/development/deployment-patch.yaml
+++ b/components/p7nh64uy6-java-springboot/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: p7nh64uy6-java-springboot
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe:8a04eb604dc4068940aab22a29388ebc4d1fa0bd@sha256:3b9cc21e719361a1c18653b64e272bcf9f3cad8831c89c20f84cc0252e1c7d2c
+          name: container-image
